--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Croisant - Contact</title>
+    <meta name="description" content="Croissant.com - site all about delicious croissants">
+    <title>Croisant.com - Contact us</title>
     <link rel="stylesheet" href="./sources/style.css">
 </head>
 <body>
