--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Croissant</title>
+    <meta name="description" content="Croissant.com - site all about delicious croissants">
+    <title>Croissant.com - history and origin of croissant</title>
     <link rel="stylesheet" href="./sources/style.css">
 </head>
 <body>
     <main>
-        <h1>Croissant - main</h1>
+        <h1>Croissant - history and origin of croissant</h1>
         <hr>
         <p>Across various accounts of croissant history, most sources agree that it originates from Austria as the kipferl. Made
         from a yeasted wheat dough, the kipferl is a baked bread roll common in Central Europe. Records state that the kipferl
