--- a/photo.html
+++ b/photo.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Croissant - photo</title>
+    <meta name="description" content="Croissant.com - site all about delicious croissants">
+    <title>Croissant.com - photo of the perfect croissant</title>
     <link rel="stylesheet" href="./sources/style.css">
 </head>
 <body>
-    <h1>Croissant</h1>
+    <h1>Perfect croissant</h1>
     <img src="./sources/croissant.jpeg" alt="croissant">
     <div class="links">
         <a href="./index.html">Main site</a>
